--- a/templates/info.html
+++ b/templates/info.html
@@ -53,7 +53,7 @@
             </p>
 
             <h2>Jump Search</h2>
-            <img src="jump_search.png" alt="Jump Search">
+            <img src="jump_Search.png" alt="Jump Search">
             <p>
                 Jump search is another search algorithm for sorted lists. It divides the list into fixed-size blocks and
                 performs a linear search within each block. If the target element is found in a block, the search is
